added tests to endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/steps-for-cause
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=steps-for-cause
 server.port=5000
