--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
     testImplementation 'io.projectreactor:reactor-test'
+    testImplementation('junit:junit:4.13')
 }
 
 test {
