--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
-spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.uri=mongodb://mongodb:27017
 spring.data.mongodb.database=steps-for-cause
 server.port=5000
+
+spring.mail.properties.mail.smtp.connecttimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mail.host=smtp.office365.com
+spring.mail.password=TechDev123!
+spring.mail.port=587
+spring.mail.username=StepsForCause@outlook.com
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+jwt.secret=techdevstepsforcausemobileappdevelopmentsecrettoken
