--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb://mongodb:27017
+spring.data.mongodb.uri=mongodb://localhost:27017
 spring.data.mongodb.database=steps-for-cause
 server.port=5000
 
